--- a/values.yaml
+++ b/values.yaml
@@ -1,19 +1,18 @@
 name: Adrianus Vian Habirowo
-email: adrianusvian1@gmail.com
+email: vian@idjo.cc
 phone: '+6285856564777'
 address: Jl. Segitiga No.7A, Joglo, Kembangan, Jakarta Barat
 website: https://idjo.cc
-git: idjo
+github: idjoo
+gitlab: idjo
 linkedin: adr-vian
 
 summary: >
-  A passionate DevOps and Infra Engineer. My love for Linux sparked in 2019,
-  and since then, it's been my go-to operating system. While my major revolves
-  around Cyber Security, my true passion lies in exploring Linux, honing skills
-  in Infrastructure and Deployment. I also thrive when immersed in Kubernetes,
-  tinkering in my homelab, deploying applications, and engaging in related
-  hands-on endeavors.
-
+  A passionate DevOps and Infra Engineer. My love for Linux sparked in 2019, and since
+  then, it's been my go-to operating system. While my major revolves around Cyber
+  Security, my true passion lies in exploring Linux, honing skills in Infrastructure
+  and Deployment. I also thrive when immersed in Kubernetes, tinkering in my homelab,
+  deploying applications, and engaging in related hands-on endeavors.
 educations:
   - school: Bina Nusantara University
     degree: Bachelor's degree
@@ -21,56 +20,95 @@ educations:
     descriptions: []
 
 workExperiences:
+  - company: PT Devoteam Cloud Services
+    jobTitle: Cloud Engineer
+    date: May 2025 -- Present
+    descriptions:
+      - >-
+        **Smartfren** (Cloud Developer) - Infrastructure Landing Zone: Perform landing
+        zone for newly created GWS Organization.
+      - >-
+        **Smartfren** (Cloud Developer, SRE, Infra) - SARAH AI Agent:
+          Build AI-powered customer care agent using **LangGraph** for **Agentic AI**.
+          Create microservices APIs with **Clean Architecture** design patterns.
+          Create data ingestion pipeline to **Vertex AI** and integrate with internal backend services.
+          Build infrastructure and CI/CD pipeline for deployment.
+          Set up **Cloud Monitoring** for observability and system reliability.
+      - >-
+        **Galeri24** (Cloud Developer) - Single CIF: Develop a backend that assists
+        in finding similar customer data and merge them to create a **single source
+        of truth**.
+      - >-
+        **Galeri24** (Cloud Developer) - Progressive Web Application:
+          Modify existing applications to be able to be used as a **Progressive Web
+        App (PWA)**,
+          Integrate PWA with mandiri livin sukha.
+      - >-
+        **Galeri24** (Cloud Developer) - Backend Application Maintenance & Fixing:
+          Fix errors found in the backend application.
+          Maintenance of application integration with third-party apps.
+      - >-
+        **Prodia** (Cloud Engineer) - GWS Migration: Perform migration from Office
+        365 to **GWS**.
+      - >-
+        **Prodia** (Cloud Engineer) - Appsheet & AppScript Apps Development: Develop
+        and create **Appsheet** application that integrates with existing **GWS**
+        environment via **App Scripts** apps.
+      - >-
+        **MyTelkomsel** (DevOps Engineer) - AI-Powered Search: Manage backend service
+        for the AI-powered search bar feature in MyTelkomsel app.
+      - >-
+        **IDX** (Cloud Developer) - AI Crawler Engine: Develop a web crawler engine
+        using **Playwright** automation for AI ingestion pipeline, serving as a search
+        tool for AI agents while bypassing robot filters.
+      - >-
+        **BNI** (Full Stack Engineer) - DIVA Chatbot: Develop frontend dashboard
+        features and backend services for BNI's internal employee chatbot application.
   - company: PT Adira Dinamika Multi Finance Tbk.
     jobTitle: Junior DevOps Engineer
     date: February 2022 -- December 2023
     descriptions:
       - >-
-        Creating deployment automation using Jenkins, Docker, Kubernetes, and
-        ArgoCD, resulting in significantly faster and more reliable
-        deployments.
+        Creating deployment automation using Jenkins, Docker, Kubernetes, and ArgoCD,
+        resulting in significantly faster and more reliable deployments.
       - >-
-        Orchestrated deployment pipelines that streamlined the release process,
-        enhancing efficiency and reducing time-to-market.
+        Orchestrated deployment pipelines that streamlined the release process, enhancing
+        efficiency and reducing time-to-market.
       - >-
-        Collaborated effectively with developers and operations teams to ensure
-        seamless integration of infrastructure and applications.
+        Collaborated effectively with developers and operations teams to ensure seamless
+        integration of infrastructure and applications.
       - >-
-        Standardized deployment and infrastructure configurations to promote
-        consistency and reduce configuration drift.
+        Standardized deployment and infrastructure configurations to promote consistency
+        and reduce configuration drift.
       - >-
-        Developed automation tools and scripts to automate manual tasks, saving
-        time and effort while minimizing errors.
+        Developed automation tools and scripts to automate manual tasks, saving time
+        and effort while minimizing errors.
       - >-
-        Proactively monitored and troubleshooted infrastructure issues,
-        ensuring high system uptime and availability.
+        Proactively monitored and troubleshooted infrastructure issues, ensuring high
+        system uptime and availability.
       - >-
-        Contributed to measurable improvements in efficiency, scalability, and
-        reliability through strategic automation and optimization initiatives.
-
+        Contributed to measurable improvements in efficiency, scalability, and reliability
+        through strategic automation and optimization initiatives.
   - company: PT Adira Dinamika Multi Finance Tbk.
     jobTitle: DevOps Engineer Intern
     date: February 2021 -- February 2022
     descriptions:
       - >-
-        Gained valuable hands-on experience in infrastructure management,
-        automation practices, and the collaborative DevOps culture.
+        Gained valuable hands-on experience in infrastructure management, automation
+        practices, and the collaborative DevOps culture.
       - >-
-        Developed kubernetes skills and honed problem-solving and communication
-        abilities.
+        Developed kubernetes skills and honed problem-solving and communication abilities.
       - >-
-        Contributed to CI/CD setup and implementation, assisting with pipeline
-        configuration and testing.
+        Contributed to CI/CD setup and implementation, assisting with pipeline configuration
+        and testing.
       - >-
-        Proactively monitored systems and documented procedures, ensuring
-        operational efficiency and knowledge transfer.
+        Proactively monitored systems and documented procedures, ensuring operational
+        efficiency and knowledge transfer.
       - >-
-        Shadowed experienced engineers and actively participated in team
-        discussions, learning best practices and gaining valuable insights.
+        Shadowed experienced engineers and actively participated in team discussions,
+        learning best practices and gaining valuable insights.
       - >-
-        Successfully develop anchor to help teammates in provisioning
-        automation process.
-
+        Successfully develop anchor to help teammates in provisioning automation process.
 technicalSkills:
   - Linux
   - Golang
@@ -87,6 +125,20 @@ certifications:
     date: September 15, 2022
   - name: AWS Certified Solutions Architect – Associate
     date: November 01, 2022
+  - name: Google Cloud Certified Professional Cloud Architect
+    date: June 07, 2024
+  - name: Google Cloud Certified Professional Cloud Developer
+    date: July 24, 2024
+  - name: Google Cloud Certified Professional Security Engineer
+    date: June 13, 2024
+  - name: Google Cloud Certified Professional Google Workspace Administrator
+    date: July 17, 2024
+  - name: Google Cloud Certified Professional Machine Learning Engineer
+    date: April 24, 2025
+  - name: Google Cloud Certified Professional Cloud DevOps Engineer
+    date: April 22, 2025
+  - name: Google Cloud Certified Professional Cloud Database Engineer
+    date: April 21, 2025
 
 trainings:
   - name: AWS Academy Graduate - AWS Academy Cloud Foundations
