--- a/values.yaml
+++ b/values.yaml
@@ -1,6 +1,6 @@
 name: Adrianus Vian
-email: contact@idjo.cc
-phone: 0858 5656 4777
+email: adrianusvian1@gmail.com
+phone: '+6285856564777'
 address: Jl. Segitiga No.7A, Joglo, Kembangan, Jakarta Barat
 website: https://idjo.cc
 git: idjo
