fix(resume): 🐛 fix linkedin url

--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ phone: 0858 5656 4777
 address: Jl. Segitiga No.7A, Joglo, Kembangan, Jakarta Barat
 website: https://idjo.cc
 git: idjo
-linkedin: cocatrip
+linkedin: adr-vian
 
 summary: >
   I'm a student at Bina Nusantara University, majoring in Cyber Security. My
