feat(resume): ✨ add gitlab and linkedin links

--- a/values.yaml
+++ b/values.yaml
@@ -3,6 +3,8 @@ email: contact@idjo.cc
 phone: 0858 5656 4777
 address: Jl. Segitiga No.7A, Joglo, Kembangan, Jakarta Barat
 website: https://idjo.cc
+git: idjo
+linkedin: cocatrip
 
 summary: >
   I'm a student at Bina Nusantara University, majoring in Cyber Security. My
