--- a/values.yaml
+++ b/values.yaml
@@ -5,10 +5,12 @@ address: Jl. Segitiga No.7A, Joglo, Kembangan, Jakarta Barat
 website: https://idjo.cc
 
 summary: >
-  I'm a student at Bina Nusantara University, majoring in Cyber Security.
-  My love for Linux sparked in 2019, and since then, it's been my go-to operating system.
-  While my major revolves around Cyber Security, my true passion lies in exploring Linux, honing skills in Infrastructure and Deployment.
-  I also thrive when immersed in Kubernetes, tinkering in my homelab, deploying applications, and engaging in related hands-on endeavors.
+  I'm a student at Bina Nusantara University, majoring in Cyber Security. My
+  love for Linux sparked in 2019, and since then, it's been my go-to operating
+  system. While my major revolves around Cyber Security, my true passion lies
+  in exploring Linux, honing skills in Infrastructure and Deployment. I also
+  thrive when immersed in Kubernetes, tinkering in my homelab, deploying
+  applications, and engaging in related hands-on endeavors.
 
 educations:
   - school: Bina Nusantara University
@@ -21,24 +23,51 @@ workExperiences:
     jobTitle: Junior DevOps Engineer
     date: February 2022 -- December 2023
     descriptions:
-      - spearheaded infrastructure automation initiatives using Jenkins, Docker, Kubernetes, and ArgoCD, resulting in significantly faster and more reliable deployments.
-      - orchestrated deployment pipelines that streamlined the release process, enhancing efficiency and reducing time-to-market.
-      - collaborated effectively with developers and operations teams to ensure seamless integration of infrastructure and applications.
-      - standardized deployment and infrastructure configurations to promote consistency and reduce configuration drift.
-      - developed automation tools and scripts to automate manual tasks, saving time and effort while minimizing errors.
-      - proactively monitored and troubleshooted infrastructure issues, ensuring high system uptime and availability.
-      - contributed to measurable improvements in efficiency, scalability, and reliability through strategic automation and optimization initiatives.
+      - >-
+        spearheaded infrastructure automation initiatives using Jenkins,
+        Docker, Kubernetes, and ArgoCD, resulting in significantly faster and
+        more reliable deployments.
+      - >-
+        orchestrated deployment pipelines that streamlined the release process,
+        enhancing efficiency and reducing time-to-market.
+      - >-
+        collaborated effectively with developers and operations teams to ensure
+        seamless integration of infrastructure and applications.
+      - >-
+        standardized deployment and infrastructure configurations to promote
+        consistency and reduce configuration drift.
+      - >-
+        developed automation tools and scripts to automate manual tasks, saving
+        time and effort while minimizing errors.
+      - >-
+        proactively monitored and troubleshooted infrastructure issues,
+        ensuring high system uptime and availability.
+      - >-
+        contributed to measurable improvements in efficiency, scalability, and
+        reliability through strategic automation and optimization initiatives.
 
   - company: PT Adira Dinamika Multifinance Tbk
     jobTitle: DevOps Engineer Intern
     date: February 2021 -- February 2022
     descriptions:
-      - gained valuable hands-on experience in infrastructure management, automation practices, and the collaborative DevOps culture.
-      - developed kubernetes skills and honed problem-solving and communication abilities.
-      - contributed to CI/CD setup and implementation, assisting with pipeline configuration and testing.
-      - proactively monitored systems and documented procedures, ensuring operational efficiency and knowledge transfer.
-      - shadowed experienced engineers and actively participated in team discussions, learning best practices and gaining valuable insights.
-      - successfully develop anchor to help teammates in provisioning automation process.
+      - >-
+        gained valuable hands-on experience in infrastructure management,
+        automation practices, and the collaborative DevOps culture.
+      - >-
+        developed kubernetes skills and honed problem-solving and communication
+        abilities.
+      - >-
+        contributed to CI/CD setup and implementation, assisting with pipeline
+        configuration and testing.
+      - >-
+        proactively monitored systems and documented procedures, ensuring
+        operational efficiency and knowledge transfer.
+      - >-
+        shadowed experienced engineers and actively participated in team
+        discussions, learning best practices and gaining valuable insights.
+      - >-
+        successfully develop anchor to help teammates in provisioning
+        automation process.
 
 technicalSkills:
   # level:
