--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,28 +1,15 @@
 steps:
   - name: "alpine/helm"
-    entrypoint: helm
-    args:
-      - "template"
-      - "resume"
-      - "."
-      - ">"
-      - "resume.yaml"
+    script: |
+      helm template resume . > resume.yaml
 
   - name: "mikefarah/yq"
-    entrypoint: yq
-    args:
-      - "-r"
-      - "'.markdown'"
-      - "resume.yaml"
-      - ">"
-      - "resume.md"
+    script: |
+      yq -r '.markdown' resume.yaml > resume.md
 
   - name: "pandoc/latex"
-    entrypoint: pandoc
-    args:
-      - "resume.md"
-      - "-o"
-      - "resume.pdf"
+    script: |
+      pandoc resume.md -o resume.pdf
 
 artifacts:
   objects:
